Added skeleton structure of app.

--- a/settings.json
+++ b/settings.json
@@ -1,3 +1,6 @@
 {
-    
+    "DISCORD_CLIENT_ID": 490732332240863233,
+    "DISCORD_CLIENT_SECRET": 0,
+    "DISCORD_REDIRECT_URI": 0 ,
+    "DISCORD_BOT_TOKEN": 0
 }
