404 for some reason. this is why I hate blueprints.

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
-    "DISCORD_CLIENT_ID": 490732332240863233,
-    "DISCORD_CLIENT_SECRET": 0,
-    "DISCORD_REDIRECT_URI": 0 ,
-    "DISCORD_BOT_TOKEN": 0
+    "DISCORD_CLIENT_ID": 800977672939241493,
+    "DISCORD_CLIENT_SECRET": "fKImzse5HZ-d9odSVauW61ul0-poSUIC",
+    "DISCORD_REDIRECT_URI": "arch.local:5000" ,
+    "DISCORD_BOT_TOKEN": "ODAwOTc3NjcyOTM5MjQxNDkz.YAZ-lg.xvFLY9BXB26GtlfNtb1y1DMnkZY"
 }
